--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<h1>Open Companies</h1>
 					<h3>Open source for business practices</h3>
 					<p>
-             By @steveklabnik. Slides: <a href="http://steveklabnik.github.io/open_company_talk/">http://steveklabnik.github.io/open_company_talk/</a>
+                                        By @steveklabnik.</p><p>Slides: <a href="http://steveklabnik.github.io/open_company_talk/">http://steveklabnik.github.io/open_company_talk/</a>
 					</p>
 				</section>
 
@@ -125,7 +125,6 @@
 
 				<section>
 					<h1>Thanks!</h1>
-					<h2>Open Companies</h2>
 					<h3>@steveklabnik</h3>
           <ul>
             <li><a href="http://opencompany.org">http://opencompany.org</a></li>
