Add stuff about gittip partnership

--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
             <h2>Crowdfunding features</h2>
             <p><a href="https://balanced.crowdhoster.com/let-s-push-to-debit-cards">https://balanced.crowdhoster.com/let-s-push-to-debit-cards</a></p>
           </section>
+          <section>
+            <h2>Open Company Partnerships?</h2>
+            <p><a href="https://github.com/gittip/www.gittip.com/pull/2036">https://github.com/gittip/www.gittip.com/pull/2036</a></p>
+            <p><a href="https://github.com/gittip/www.gittip.com/pull/2053">https://github.com/gittip/www.gittip.com/pull/2053</a></p>
+            <p><a href="https://github.com/gittip/www.gittip.com/pull/2062">https://github.com/gittip/www.gittip.com/pull/2062</a></p>
+          </section>
 				</section>
 
 				<section>
