How open is open enough?

--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
             <p><a href="https://github.com/gittip/www.gittip.com/pull/2053">https://github.com/gittip/www.gittip.com/pull/2053</a></p>
             <p><a href="https://github.com/gittip/www.gittip.com/pull/2062">https://github.com/gittip/www.gittip.com/pull/2062</a></p>
           </section>
+          <section>
+            <h2>How open is open enough?</h2>
+            <p><a href="https://github.com/balanced/balanced-api/issues/23#issuecomment-36059506">https://github.com/balanced/balanced-api/issues/23#issuecomment-36059506</a></p>
+          </section>
 				</section>
 
 				<section>
